--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,10 +13,12 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
