--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chat-engine": "^1.11.22",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-router-dom": "^6.0.1",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.3.2",
     "tslint": "^6.1.3",
     "tslint-etc": "^1.13.10"
   }
