--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/react-redux": "^7.1.20",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.0",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chat-engine": "^1.11.22",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
-    "react-router-dom": "^6.0.1",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "typescript": "^4.4.4",
