--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
