--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-redux": "^7.1.20",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.0",
