--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@reduxjs/toolkit": "^1.6.2",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-redux": "^7.1.20",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.0",
     "history": "^5.1.0",
@@ -61,6 +63,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.2",
+    "axios-logger": "^2.6.0",
     "tslint": "^6.1.3",
     "tslint-etc": "^1.13.10"
   }
