--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
