--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chat-engine": "^1.11.22",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.0.2",
