--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-chat-elements": "^10.16.0",
+    "react-chat-elements-typescript": "^11.0.0",
     "react-chat-engine": "^1.11.22",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-select-search": "^3.0.9",
     "reactjs-popup": "^2.0.5",
     "redux": "^4.1.2",
     "typescript": "^4.4.4",
