--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.0",
     "history": "^5.1.0",
+    "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chat-engine": "^1.11.22",
