--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.3.0",
     "reactjs-popup": "^2.0.5",
     "redux": "^4.1.2",
     "typescript": "^4.4.4",
